--- a/pos/pos/pos.vcxproj
+++ b/pos/pos/pos.vcxproj
@@ -124,6 +124,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Group1.cpp" />
+    <ClCompile Include="option2.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
