--- a/pos/pos/pos.vcxproj.filters
+++ b/pos/pos/pos.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="Group1.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="option2.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
