--- a/pos/pos/pos.vcxproj.filters
+++ b/pos/pos/pos.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="option2.cpp">
+    <ClCompile Include="Group1.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
