Change .cpp file and functions to .c
Change .cpp file to .c so that Visual Studio debug code in C language instead of C++, replaced C++ functions with C functions

--- a/pos/pos/pos.vcxproj.filters
+++ b/pos/pos/pos.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Group1.cpp">
+    <ClCompile Include="Group1.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
