--- a/pos/pos/pos.vcxproj
+++ b/pos/pos/pos.vcxproj
@@ -19,7 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Group1.cpp" />
+    <ClCompile Include="Group1.c" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
